Configure config.json

--- a/tuneinator/config.json
+++ b/tuneinator/config.json
@@ -1,6 +1,6 @@
 {
-    "blocked": false,
-    "base_url": "bb",
-    "path": "aa",
-    "jquery_version": "jquery_version"
+    "blocked": 0,
+    "base_url": "https://new.myfreemp3juices.cc",
+    "path": "/api/api_search.php?callback=",
+    "jquery_version": "jQuery2130996268872647724_1681673767647"
 }
