--- a/tuneinator/config001.json
+++ b/tuneinator/config001.json
@@ -1,8 +1,8 @@
 {
     "blocked": false,
-    "base_url": "https://new.myfreemp3juices.cc",
-    "path": "/api/api_search.php?callback=",
-    "jquery_version": "jQuery2130996268872647724_1681673767647",
+    "url_base": "https://new.myfreemp3juices.cc",
+    "url_path": "/api/api_search.php?callback=",
+    "url_callback": "jQuery2130996268872647724_1681673767647",
     "allowed_retries": 7,
     "retry_timeout": 0.2,
     "theme": "DarkAmber",
