--- a/tuneinator/config001.json
+++ b/tuneinator/config001.json
@@ -1,5 +1,5 @@
 {
-    "blocked": true,
+    "blocked": false,
     "url_base": "https://new.myfreemp3juices.cc",
     "url_path": "/api/api_search.php?callback=",
     "url_callback": "jQuery2130996268872647724_1681673767647",
