--- a/tuneinator/config001.json
+++ b/tuneinator/config001.json
@@ -1,4 +1,6 @@
 {
+    "title": "Tuneinator 2.0",
+    "header_text": ["Brauchen Sie tunes Ja?", "Andere header??"],
     "blocked": false,
     "url_base": "https://new.myfreemp3juices.cc",
     "url_path": "/api/api_search.php?callback=",
