--- a/tuneinator/config001.json
+++ b/tuneinator/config001.json
@@ -1,7 +1,7 @@
 {
     "title": "Tuneinator 2.0",
     "header_text": ["Brauchen Sie tunes Ja?"],
-    "blocked": true,
+    "blocked": false,
     "url_base": "https://new.myfreemp3juices.cc",
     "url_path": "/api/api_search.php?callback=",
     "url_callback": "jQuery2130996268872647724_1681673767647",
