--- a/tuneinator/config001.json
+++ b/tuneinator/config001.json
@@ -5,6 +5,7 @@
     "url_base": "https://new.myfreemp3juices.cc",
     "url_path": "/api/api_search.php?callback=",
     "url_callback": "jQuery2130996268872647724_1681673767647",
+    "duration_tolerance_percentage": 2,
     "max_tunes_to_consider": 1,
     "allowed_retries": 7,
     "retry_timeout": 0.2,
