--- a/tuneinator/config001.json
+++ b/tuneinator/config001.json
@@ -5,7 +5,7 @@
     "url_base": "https://new.myfreemp3juices.cc",
     "url_path": "/api/api_search.php?callback=",
     "url_callback": "jQuery2130996268872647724_1681673767647",
-    "check_duration": true,
+    "check_duration": false,
     "duration_tolerance_percentage": 2,
     "max_tunes_to_consider": 5,
     "allowed_retries": 7,
