--- a/tuneinator/config002.json
+++ b/tuneinator/config002.json
@@ -6,7 +6,7 @@
     "blocked_text": "This version of Tuneinator has been disabled.",
     "base_url": "https://2024.myfreemp3juices.cc//api/api_search.php?callback=jQuery2130996268872647724_1681673767647",
     "allowed_modes": ["Single Thread", "Bounded Multithreading", "Unbounded Multithreading"],
-    "default_mode": "Unbounded bb",
+    "default_mode": "Bounded Multithreading",
     "duration_tolerance_percentage": 2,
     "max_tunes_to_consider": 2,
     "allowed_retries": 7,
