--- a/tuneinator/config3.0.json
+++ b/tuneinator/config3.0.json
@@ -14,6 +14,7 @@
     "mfmp":
         {
             "url": "https://2024.myfreemp3juices.cc//api/api_search.php",
+            "response_parsing_pattern": "{\"response\":.*})",
             "duration_tolerance": 0.2,
             "max_tunes_to_consider": 2,
             "allowed_retries": 7,
@@ -32,6 +33,6 @@
         },
     "spotify":
         {
-            "spotify_url_regex_pattern": "https:\\/\\/open\\.spotify\\.com\\/playlist\\/.*",
+            "spotify_url_regex_pattern": "https:\\/\\/open\\.spotify\\.com\\/playlist\\/.*"
         }
 }
