--- a/tuneinator/config3.0.json
+++ b/tuneinator/config3.0.json
@@ -17,7 +17,7 @@
             "response_parsing_pattern": "\\{\"response\":.*\\}\\);",
             "duration_tolerance": 0.2,
             "max_tunes_to_consider": 2,
-            "allowed_retries": 7,
+            "allowed_error_retries": 7,
             "retry_timeout": 0.1
         },
     "downloading":
