--- a/tuneinator/config3.0.json
+++ b/tuneinator/config3.0.json
@@ -18,7 +18,8 @@
             "duration_tolerance": 0.2,
             "max_tunes_to_consider": 2,
             "allowed_error_retries": 7,
-            "retry_timeout": 10
+            "retry_timeout": 10,
+            "trim_artists": true
         },
     "downloading":
         {
