--- a/tuneinator/config3.0.json
+++ b/tuneinator/config3.0.json
@@ -25,7 +25,8 @@
         {
             "check_bitrate": true,
             "min_frequency": 18000,
-            "naming_convention": "{title} - {artist} {tempo}"
+            "naming_conventions": ["title - artist", "artist - title", "title - artist BPM", "artist - title BPM"],
+            "default_naming_convention": "title - artist"
         },
     "logging":
         {
