--- a/tuneinator/config3.0.json
+++ b/tuneinator/config3.0.json
@@ -22,7 +22,7 @@
         {
             "check_bitrate": true,
             "min_frequency": 18000,
-            "naming_conventions": ["title - artist", "artist - title.mp3", "title - artist BPM", "artist - title BPM"]
+            "naming_conventions": ["title - artist.mp3", "artist - title.mp3", "title - artist BPM.mp3", "artist - title BPM.mp3"]
         },
     "logging":
         {
